[project]
name = "mcp-rtl-lint"
version = "0.1.0"
description = "MCP Server for RTL linting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
    "pytest>=7.0",
]

[project.scripts]
mcp-rtl-lint = "mcp_rtl_lint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
